this is third 3 commit

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>this is bardiya</h1>
+    <p>i am bardiya</p>
+    <p>i am bardiya</p>
+    <p>i am bardiya</p>
+    <p>i am bardiya</p>
+    <p>i am bardiya</p>
 </body>
 </html>
