--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <p>i am bardiya</p>
     <p>i am bardiya</p>
     <p>i am bardiya</p>
+    <p>i am bardiya</p>
+    <p>i am bardiya</p>
+    <p>i am bardiya</p>
+    <p>i am bardiya</p>
 </body>
 </html>
